--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">My Application</string>
+    <string name="title_activity_menu">MainActivity</string>
+    <string name="title_menu">Menu</string>
+    <string name="title_dashboard">Dashboard</string>
+    <string name="title_configuracion">Configuracion</string>
 </resources>
